--- a/前后端交互.md
+++ b/前后端交互.md
@@ -8,21 +8,21 @@
    + 存有该资源的服务器名称
    + 资源在服务器上具体的存放位置
 
-   ![image-20210205153420115](D:\vue\前后端交互.assets\image-20210205153420115.png)
+   ![image-20210205153420115](前后端交互.assets\image-20210205153420115.png)
 
 2. 网页中如何请求数据：
 
-   ![image-20210205154709155](D:\vue\前后端交互.assets\image-20210205154709155.png)
+   ![image-20210205154709155](前后端交互.assets\image-20210205154709155.png)
 
 3. 资源的请求方式：
 
-   ![image-20210205154905517](D:\vue\前后端交互.assets\image-20210205154905517.png)
+   ![image-20210205154905517](前后端交互.assets\image-20210205154905517.png)
 
 ## 2.ajax
 
 1. Ajax能让我们轻松实现网页与服务器之间的数据交互。
 
-   ![image-20210205155041220](D:\vue\前后端交互.assets\image-20210205155041220.png)
+   ![image-20210205155041220](前后端交互.assets\image-20210205155041220.png)
 
 2. jQuery中的Ajax
 
@@ -88,35 +88,35 @@
 
 2. 接口的请求过程
 
-   ![image-20210205165106676](D:\vue\前后端交互.assets\image-20210205165106676.png)
+   ![image-20210205165106676](前后端交互.assets\image-20210205165106676.png)
 
-![image-20210205165132508](D:\vue\前后端交互.assets\image-20210205165132508.png)
+![image-20210205165132508](前后端交互.assets\image-20210205165132508.png)
 
 3. 接口测试工具
 
-   ![image-20210205165631696](D:\vue\前后端交互.assets\image-20210205165631696.png)
+   ![image-20210205165631696](前后端交互.assets\image-20210205165631696.png)
 
 4. 接口文档
 
    1. 接口文档格式：
 
-   2. ![image-20210205165925267](D:\vue\前后端交互.assets\image-20210205165925267.png)
+   2. ![image-20210205165925267](前后端交互.assets\image-20210205165925267.png)
 
    3. 接口文档示例
 
-      ![image-20210205165951250](D:\vue\前后端交互.assets\image-20210205165951250.png)
+      ![image-20210205165951250](前后端交互.assets\image-20210205165951250.png)
 
-      ![image-20210205170008892](D:\vue\前后端交互.assets\image-20210205170008892.png)
+      ![image-20210205170008892](前后端交互.assets\image-20210205170008892.png)
 
    4. 案例：图书管理
 
       + 渲染图书列表（核心代码）
 
-        ![image-20210207175618628](D:\vue\前后端交互.assets\image-20210207175618628.png)
+        ![image-20210207175618628](前后端交互.assets\image-20210207175618628.png)
 
       + 删除图书（核心代码）
 
-        ![image-20210207175718197](D:\vue\前后端交互.assets\image-20210207175718197.png)
+        ![image-20210207175718197](前后端交互.assets\image-20210207175718197.png)
 
 ## 4.form表单
 
@@ -126,11 +126,11 @@
 
    1. 表单的组成部分
 
-      ![image-20210213110308179](D:\vue\前后端交互.assets\image-20210213110308179.png)
+      ![image-20210213110308179](前后端交互.assets\image-20210213110308179.png)
 
    2. form标签的属性
 
-      ![image-20210213110429903](D:\vue\前后端交互.assets\image-20210213110429903.png)
+      ![image-20210213110429903](前后端交互.assets\image-20210213110429903.png)
 
       + action
 
@@ -148,7 +148,7 @@
 
         他的可选值有五个，默认情况下，target的值是_self，表示在相同框架中打开action URL。
 
-        ![image-20210213111159929](D:\vue\前后端交互.assets\image-20210213111159929.png)
+        ![image-20210213111159929](前后端交互.assets\image-20210213111159929.png)
 
       + method
 
@@ -168,7 +168,7 @@
 
         它的可选值有三个，默认情况下，enctype的值为application/x-www-form-urlencoded，表示在发送前编码所有的字符。
 
-        ![image-20210213125547121](D:\vue\前后端交互.assets\image-20210213125547121.png)
+        ![image-20210213125547121](前后端交互.assets\image-20210213125547121.png)
 
    3. 表单的同步提交及缺点
 
@@ -206,7 +206,7 @@
 
         serialize()函数
 
-        ![image-20210213131214053](D:\vue\前后端交互.assets\image-20210213131214053.png)
+        ![image-20210213131214053](前后端交互.assets\image-20210213131214053.png)
 
         
 
@@ -216,16 +216,16 @@
 
 2. art-template标准语法
 
-   + 输出![image-20210213162515199](D:\vue\前后端交互.assets\image-20210213162515199.png)
-   + 原文输出![image-20210213162828708](D:\vue\前后端交互.assets\image-20210213162828708.png)
+   + 输出![image-20210213162515199](前后端交互.assets\image-20210213162515199.png)
+   + 原文输出![image-20210213162828708](前后端交互.assets\image-20210213162828708.png)
 
-   + 条件输出![image-20210213162917363](D:\vue\前后端交互.assets\image-20210213162917363.png)
+   + 条件输出![image-20210213162917363](前后端交互.assets\image-20210213162917363.png)
 
-   + 循环输出![image-20210213163234987](D:\vue\前后端交互.assets\image-20210213163234987.png)
+   + 循环输出![image-20210213163234987](前后端交互.assets\image-20210213163234987.png)
 
-   + 过滤器![image-20210213163354623](D:\vue\前后端交互.assets\image-20210213163354623.png)
+   + 过滤器![image-20210213163354623](前后端交互.assets\image-20210213163354623.png)
 
-     ![image-20210213195137894](D:\vue\前后端交互.assets\image-20210213195137894.png)
+     ![image-20210213195137894](前后端交互.assets\image-20210213195137894.png)
 
      定义一个格式化时间的过滤器dateFormat：
 
@@ -243,7 +243,7 @@
 
 3. 模板引擎中正则表达式的应用
 
-   ![image-20210219201846390](D:\vue\前后端交互.assets\image-20210219201846390.png)
+   ![image-20210219201846390](前后端交互.assets\image-20210219201846390.png)
 
 ## 6.xhr
 
@@ -251,7 +251,7 @@
 
    XMLHttpRequest是浏览器提供的JavaScript对象，通过它，可以请求服务器上的数据资源。之前所学的jQuery中的ajax就是基于xhr对象封装出来的。
 
-   ![image-20210219210249734](D:\vue\前后端交互.assets\image-20210219210249734.png)
+   ![image-20210219210249734](前后端交互.assets\image-20210219210249734.png)
 
    1. 使用xhr发起GET请求
 
@@ -260,11 +260,11 @@
       + 调用xhr.send()函数
       + 监听xhr.onreadystatechange事件
 
-      ![image-20210219210747323](D:\vue\前后端交互.assets\image-20210219210747323.png)
+      ![image-20210219210747323](前后端交互.assets\image-20210219210747323.png)
 
    2. 了解xhr对象的readyState属性
 
-      ![image-20210219210917474](D:\vue\前后端交互.assets\image-20210219210917474.png)
+      ![image-20210219210917474](前后端交互.assets\image-20210219210917474.png)
 
    3. 使用xhr发起带参数的GET请求
 
@@ -278,17 +278,17 @@
 
       + get请求携带参数的本质
 
-        ![image-20210219211540641](D:\vue\前后端交互.assets\image-20210219211540641.png)
+        ![image-20210219211540641](前后端交互.assets\image-20210219211540641.png)
 
    5. URL编码与解码
 
-      ![image-20210219211847070](D:\vue\前后端交互.assets\image-20210219211847070.png)
+      ![image-20210219211847070](前后端交互.assets\image-20210219211847070.png)
 
-      ![image-20210219211922729](D:\vue\前后端交互.assets\image-20210219211922729.png)
+      ![image-20210219211922729](前后端交互.assets\image-20210219211922729.png)
 
    6. 使用xhr发起POST请求
 
-      ![image-20210219212158582](D:\vue\前后端交互.assets\image-20210219212158582.png)
+      ![image-20210219212158582](前后端交互.assets\image-20210219212158582.png)
 
 ## 7.数据交换格式
 
@@ -298,7 +298,7 @@
 
    + XML被设计用来传输和储存数据，是数据的载体。
 
-     ![image-20210221163546678](D:\vue\前后端交互.assets\image-20210221163546678.png)
+     ![image-20210221163546678](前后端交互.assets\image-20210221163546678.png)
 
 2. JSON
 
@@ -314,11 +314,11 @@
 
       + **数组结构**：数组结构在json中表示为[]括起来的内容。数据结构为["java"."javascript",30,true...]。数组中数据的类型可以是数字、字符串、布尔值、null、数组、对象六种类型。
 
-        ![image-20210221164813447](D:\vue\前后端交互.assets\image-20210221164813447.png)
+        ![image-20210221164813447](前后端交互.assets\image-20210221164813447.png)
 
    2. json语法的注意事项：
 
-      ![image-20210221164946066](D:\vue\前后端交互.assets\image-20210221164946066.png)
+      ![image-20210221164946066](前后端交互.assets\image-20210221164946066.png)
 
    3. json和js对象的关系
 
@@ -334,17 +334,17 @@
 
    4. json和js对象的互转
 
-      ![image-20210221165515389](D:\vue\前后端交互.assets\image-20210221165515389.png)
+      ![image-20210221165515389](前后端交互.assets\image-20210221165515389.png)
 
    5. 序列化和反序列化
 
-      ![image-20210221165838410](D:\vue\前后端交互.assets\image-20210221165838410.png)
+      ![image-20210221165838410](前后端交互.assets\image-20210221165838410.png)
 
 ## 7.XMLHttpRequest Level2的新特性
 
 1. XMLHttpRequest Level2的新功能
 
-   ![image-20210223141815044](D:\vue\前后端交互.assets\image-20210223141815044.png)
+   ![image-20210223141815044](前后端交互.assets\image-20210223141815044.png)
 
 2. 设置HTTP请求时限
 
@@ -372,11 +372,11 @@
 
    Ajax操作往往用来提交表单数据，为了方便表单的处理，HTML5新增了一个FormData对象，可以模拟表单操作
 
-   ![image-20210223143214703](D:\vue\前后端交互.assets\image-20210223143214703.png)
+   ![image-20210223143214703](前后端交互.assets\image-20210223143214703.png)
 
    FormData对象也可以用来获取网页表单的值：
 
-   ![image-20210223144405595](D:\vue\前后端交互.assets\image-20210223144405595.png)
+   ![image-20210223144405595](前后端交互.assets\image-20210223144405595.png)
 
 4. 上传文件
 
@@ -450,7 +450,7 @@
 
    ajax请求开始时，执行ajaxStart函数。可以在ajaxStart的callback中显示loading效果，
 
-   ![image-20210303171249213](D:\vue\前后端交互.assets\image-20210303171249213.png)
+   ![image-20210303171249213](前后端交互.assets\image-20210303171249213.png)
 
 ## 6.axios
 
@@ -458,27 +458,27 @@
 
 2. axios发起GET请求
 
-   ![image-20210303172725033](D:\vue\前后端交互.assets\image-20210303172725033.png)
+   ![image-20210303172725033](前后端交互.assets\image-20210303172725033.png)
 
 3. axios发起POST请求
 
-   ![image-20210303173143683](D:\vue\前后端交互.assets\image-20210303173143683.png)
+   ![image-20210303173143683](前后端交互.assets\image-20210303173143683.png)
 
 4. 直接使用axios发起请求
 
    1. get
 
-      ![image-20210303173322372](D:\vue\前后端交互.assets\image-20210303173322372.png)
+      ![image-20210303173322372](前后端交互.assets\image-20210303173322372.png)
 
    2. post
 
-      ![image-20210303173357548](D:\vue\前后端交互.assets\image-20210303173357548.png)
+      ![image-20210303173357548](前后端交互.assets\image-20210303173357548.png)
 
  ## 7.同源策略
 
 1. **同源**：如果两个页面的协议，域名和端口都相同，则两个页面具有相同的源。（端口若没有给定，则默认80）
 
-   ![image-20210304102651583](D:\vue\前后端交互.assets\image-20210304102651583.png)
+   ![image-20210304102651583](前后端交互.assets\image-20210304102651583.png)
 
 2. **同源策略**：mdn官方给定的概念：同源策略限制了从同一个源加载的文档或脚本如何与来自另一个源的资源进行交互。这是一个用于隔离潜在恶意文件的重要安全机制。
 
@@ -498,13 +498,13 @@
 
 2. **浏览器对跨域请求的拦截**
 
-   ![image-20210313124811590](D:\vue\前后端交互.assets\image-20210313124811590.png)
+   ![image-20210313124811590](前后端交互.assets\image-20210313124811590.png)
 
    注意：浏览器允许发起跨域请求，但是跨域请求回来的数据，会被浏览器拦截，无法被页面获取到。
 
 3. **如何实现跨域数据请求**
 
-   ![image-20210313125036358](D:\vue\前后端交互.assets\image-20210313125036358.png)
+   ![image-20210313125036358](前后端交互.assets\image-20210313125036358.png)
 
 ## 9.JSONP
 
@@ -518,7 +518,7 @@
 
 3. 实现简单的jsonp请求
 
-   ![image-20210313132226025](D:\vue\前后端交互.assets\image-20210313132226025.png)
+   ![image-20210313132226025](前后端交互.assets\image-20210313132226025.png)
 
 4. jsonp的缺点
 
@@ -528,17 +528,17 @@
 
 5. 使用jquery发起jsonp数据请求
 
-   ![image-20210313133518617](D:\vue\前后端交互.assets\image-20210313133518617.png)
+   ![image-20210313133518617](前后端交互.assets\image-20210313133518617.png)
 
 6. jQuery中jsonp的实现过程
 
    jquery中jsonp也是通过<script>标签的src属性实现跨域数据访问的，只不过，jQuery采用的是动态创建和移除<script>标签的方式，来发起jsonp数据请求
 
-   ![image-20210313135406643](D:\vue\前后端交互.assets\image-20210313135406643.png)
+   ![image-20210313135406643](前后端交互.assets\image-20210313135406643.png)
 
 7. 自定义参数及回调函数名称
 
-   ![image-20210313140026978](D:\vue\前后端交互.assets\image-20210313140026978.png)
+   ![image-20210313140026978](前后端交互.assets\image-20210313140026978.png)
 
 ## 10.防抖与节流
 
@@ -560,7 +560,7 @@
 
    3. 使用节流优化鼠标跟随效果
 
-      ![image-20210317191713015](D:\vue\前后端交互.assets\image-20210317191713015.png)
+      ![image-20210317191713015](前后端交互.assets\image-20210317191713015.png)
 
 3. **防抖和节流的区别**
    + 防抖：如果事件被频繁触发，防抖能保证只有最后一次触发生效。前面n多次的触发都会被忽略。
@@ -578,15 +578,15 @@
 
    2. 互联网中的通信协议
 
-      ![image-20210317193812632](D:\vue\前后端交互.assets\image-20210317193812632.png)
+      ![image-20210317193812632](前后端交互.assets\image-20210317193812632.png)
 
    3. 什么是http协议
 
-      ![image-20210317193932490](D:\vue\前后端交互.assets\image-20210317193932490.png)
+      ![image-20210317193932490](前后端交互.assets\image-20210317193932490.png)
 
    4. http协议交互模型
 
-      ![image-20210317194042774](D:\vue\前后端交互.assets\image-20210317194042774.png)
+      ![image-20210317194042774](前后端交互.assets\image-20210317194042774.png)
 
    
 
@@ -598,27 +598,27 @@
 
    HTTP请求消息由请求行、请求头部、空行和请求体4个部分组成。
 
-   ![image-20210317195047640](D:\vue\前后端交互.assets\image-20210317195047640.png)
+   ![image-20210317195047640](前后端交互.assets\image-20210317195047640.png)
 
    + 请求行
 
-     ![image-20210317202913716](D:\vue\前后端交互.assets\image-20210317202913716.png)
+     ![image-20210317202913716](前后端交互.assets\image-20210317202913716.png)
 
    + 请求头部
 
      ​        请求头部用来描述客户端的基本信息，从而把客户端相关的信息告知服务器。比如：User-Agent用来说明当前是什么类型的浏览器；Content-Type用来描述发送到服务器的数据格式；Accept用来描述客户端能够接收什么类型的返回内容；Accept-Language用来描述客户端期望接收哪种人类语言的文本内容。
 
-     ![image-20210317203509804](D:\vue\前后端交互.assets\image-20210317203509804.png)
+     ![image-20210317203509804](前后端交互.assets\image-20210317203509804.png)
 
-     ![image-20210317203548194](D:\vue\前后端交互.assets\image-20210317203548194.png)
+     ![image-20210317203548194](前后端交互.assets\image-20210317203548194.png)
 
    + 空行
 
-     ![image-20210317203711563](D:\vue\前后端交互.assets\image-20210317203711563.png)
+     ![image-20210317203711563](前后端交互.assets\image-20210317203711563.png)
 
    + 请求体
 
-     ![image-20210317203758037](D:\vue\前后端交互.assets\image-20210317203758037.png)
+     ![image-20210317203758037](前后端交互.assets\image-20210317203758037.png)
 
      **只有post请求才有请求体，get请求没有请求体。**
 
@@ -626,27 +626,27 @@
 
    响应消息就是服务器响应给客户端的消息内容，也叫做响应报文。
 
-   ![image-20210317204229974](D:\vue\前后端交互.assets\image-20210317204229974.png)
+   ![image-20210317204229974](前后端交互.assets\image-20210317204229974.png)
 
    + 状态行
 
-   ​	![image-20210317210420079](D:\vue\前后端交互.assets\image-20210317210420079.png)
+   ​	![image-20210317210420079](前后端交互.assets\image-20210317210420079.png)
 
    + 响应头部
 
-     ![image-20210317210649650](D:\vue\前后端交互.assets\image-20210317210649650.png)
+     ![image-20210317210649650](前后端交互.assets\image-20210317210649650.png)
 
      常见的响应头部字段
 
-     ![image-20210317210723711](D:\vue\前后端交互.assets\image-20210317210723711.png)
+     ![image-20210317210723711](前后端交互.assets\image-20210317210723711.png)
 
    + 空行
 
-     ![image-20210317210814661](D:\vue\前后端交互.assets\image-20210317210814661.png)
+     ![image-20210317210814661](前后端交互.assets\image-20210317210814661.png)
 
    + 响应体
 
-     ![image-20210317210856405](D:\vue\前后端交互.assets\image-20210317210856405.png)
+     ![image-20210317210856405](前后端交互.assets\image-20210317210856405.png)
 
    4. **http响应状态码**
 
@@ -654,51 +654,51 @@
 
          HTTP请求方法，属于HTTP协议中的一部分，请求方法的作用是：用来表明要对服务器上的资源执行的操作。最常用的请求方法是GET和POST。
 
-         ![image-20210317211208626](D:\vue\前后端交互.assets\image-20210317211208626.png)
+         ![image-20210317211208626](前后端交互.assets\image-20210317211208626.png)
 
       2. HTTP响应状态码
 
-         ![image-20210317211411822](D:\vue\前后端交互.assets\image-20210317211411822.png)
+         ![image-20210317211411822](前后端交互.assets\image-20210317211411822.png)
 
       3. HTTP响应状态码的组成及分类
 
-         ![image-20210317211544100](D:\vue\前后端交互.assets\image-20210317211544100.png)
+         ![image-20210317211544100](前后端交互.assets\image-20210317211544100.png)
 
          + 2xx
 
-           ![image-20210317211725884](D:\vue\前后端交互.assets\image-20210317211725884.png)
+           ![image-20210317211725884](前后端交互.assets\image-20210317211725884.png)
 
          + 3xx
 
-           ![image-20210317211813955](D:\vue\前后端交互.assets\image-20210317211813955.png)
+           ![image-20210317211813955](前后端交互.assets\image-20210317211813955.png)
 
          + 4xx
 
-           ![image-20210317211917442](D:\vue\前后端交互.assets\image-20210317211917442.png)
+           ![image-20210317211917442](前后端交互.assets\image-20210317211917442.png)
 
          + 5xx
 
-           ![image-20210317212051070](D:\vue\前后端交互.assets\image-20210317212051070.png)
+           ![image-20210317212051070](前后端交互.assets\image-20210317212051070.png)
 
 ## 12.git
 
 1. 使用版本控制软件的好处
 
-   ![image-20210319151541594](D:\vue\前后端交互.assets\image-20210319151541594.png)
+   ![image-20210319151541594](前后端交互.assets\image-20210319151541594.png)
 
 2. 分布式版本控制系统
 
-   ![image-20210319162125068](D:\vue\前后端交互.assets\image-20210319162125068.png)
+   ![image-20210319162125068](前后端交互.assets\image-20210319162125068.png)
 
 3. Git
 
    1. git记录快照	
 
-      ![image-20210319162625332](D:\vue\前后端交互.assets\image-20210319162625332.png)
+      ![image-20210319162625332](前后端交互.assets\image-20210319162625332.png)
 
    2. git中近乎所有操作都是本地执行
 
-      ![image-20210319162910444](D:\vue\前后端交互.assets\image-20210319162910444.png)
+      ![image-20210319162910444](前后端交互.assets\image-20210319162910444.png)
 
    3. Git中管理项目的三个区域
 
@@ -706,7 +706,7 @@
 
    4. Git中的三种状态
 
-      ![image-20210319163234106](D:\vue\前后端交互.assets\image-20210319163234106.png)
+      ![image-20210319163234106](前后端交互.assets\image-20210319163234106.png)
 
       + 工作区的文件被修改了，但还没有放到暂存区，就是已修改状态。
       + 如果文件已修改并放入暂存区，就属于已暂存状态。
@@ -714,7 +714,7 @@
 
    5. Git的工作流程
 
-      ![image-20210319163624727](D:\vue\前后端交互.assets\image-20210319163624727.png)
+      ![image-20210319163624727](前后端交互.assets\image-20210319163624727.png)
 
 4. **Git的基本操作**
 
@@ -735,13 +735,13 @@
 
    3. ***工作区中文件的四种状态***
 
-      ![image-20210319192952457](D:\vue\前后端交互.assets\image-20210319192952457.png)
+      ![image-20210319192952457](前后端交互.assets\image-20210319192952457.png)
 
    4. ***检查文件的状态***
 
       可以使用git status命令查看文件处于什么状态
 
-      ![image-20210319193943035](D:\vue\前后端交互.assets\image-20210319193943035.png)
+      ![image-20210319193943035](前后端交互.assets\image-20210319193943035.png)
 
    5. ***以精简的方式显示文件状态***
 
@@ -753,7 +753,7 @@
 
       未跟踪文件前面有红色的？？标记例如：
 
-      ![image-20210319195337449](D:\vue\前后端交互.assets\image-20210319195337449.png)
+      ![image-20210319195337449](前后端交互.assets\image-20210319195337449.png)
 
    6. ***跟踪新文件***
 
@@ -775,25 +775,25 @@
 
       -m选项后面时本次的提交消息，用来对提交的内容做进一步的描述。
 
-      ![image-20210319200258896](D:\vue\前后端交互.assets\image-20210319200258896.png)
+      ![image-20210319200258896](前后端交互.assets\image-20210319200258896.png)
 
    8. ***对已提交的文件进行修改***
 
-      ![image-20210319200811475](D:\vue\前后端交互.assets\image-20210319200811475.png)
+      ![image-20210319200811475](前后端交互.assets\image-20210319200811475.png)
 
    9. ***暂存已修改的文件***
 
-      ![image-20210319200738994](D:\vue\前后端交互.assets\image-20210319200738994.png)
+      ![image-20210319200738994](前后端交互.assets\image-20210319200738994.png)
 
    10. ***提交已暂存的文件***
 
        再次运行git commit -m “提交消息”命令，即可将暂存区中记录的index.html的快照，提交到Git仓库中进行保存
 
-       ![image-20210319202533909](D:\vue\前后端交互.assets\image-20210319202533909.png)
+       ![image-20210319202533909](前后端交互.assets\image-20210319202533909.png)
 
    11. ***撤销对文件的修改***
 
-       ![image-20210319202608800](D:\vue\前后端交互.assets\image-20210319202608800.png)
+       ![image-20210319202608800](前后端交互.assets\image-20210319202608800.png)
 
    12. ***向暂存区中一次性添加多个文件***
 
@@ -816,7 +816,7 @@
        git commit -a -m
        ```
 
-       ![image-20210319204406073](D:\vue\前后端交互.assets\image-20210319204406073.png)
+       ![image-20210319204406073](前后端交互.assets\image-20210319204406073.png)
 
    15. ***移除文件***
 
@@ -836,11 +836,11 @@
 
    16. ***忽略文件***
 
-       ![image-20210319205045601](D:\vue\前后端交互.assets\image-20210319205045601.png)
+       ![image-20210319205045601](前后端交互.assets\image-20210319205045601.png)
 
    17. ***glob模式***
 
-       ![image-20210319205231077](D:\vue\前后端交互.assets\image-20210319205231077.png)
+       ![image-20210319205231077](前后端交互.assets\image-20210319205231077.png)
 
    18. ***查看提交历史***
 
@@ -848,11 +848,11 @@
        git log
        ```
 
-       ![image-20210319210059133](D:\vue\前后端交互.assets\image-20210319210059133.png)
+       ![image-20210319210059133](前后端交互.assets\image-20210319210059133.png)
 
    19. ***回退到指定版本***
 
-       ![image-20210319210706864](D:\vue\前后端交互.assets\image-20210319210706864.png)
+       ![image-20210319210706864](前后端交互.assets\image-20210319210706864.png)
 
 ## 13.Github
 
@@ -877,7 +877,7 @@
 
       在初始化本地Git仓库的时候，Git默认已经帮我们创建了一个名字叫做master的分支。通常我们把这个master分支叫做主分支。
 
-      ![image-20210321011147691](D:\vue\前后端交互.assets\image-20210321011147691.png)
+      ![image-20210321011147691](前后端交互.assets\image-20210321011147691.png)
 
       master主分支的作用：用来保存和记录整个项目已完成的功能代码。
 
@@ -901,7 +901,7 @@
       git branch 分支名称
       ```
 
-      ![image-20210321011639803](D:\vue\前后端交互.assets\image-20210321011639803.png)
+      ![image-20210321011639803](前后端交互.assets\image-20210321011639803.png)
 
    5. **切换分支**
 
@@ -909,7 +909,7 @@
       git checkout login
       ```
 
-      ![image-20210321011719192](D:\vue\前后端交互.assets\image-20210321011719192.png)
+      ![image-20210321011719192](前后端交互.assets\image-20210321011719192.png)
 
    6. **分支的快速创建和切换**
 
@@ -919,7 +919,7 @@
       Eg:git checkout -b 分支名称
       ```
 
-      ![image-20210321011927951](D:\vue\前后端交互.assets\image-20210321011927951.png)
+      ![image-20210321011927951](前后端交互.assets\image-20210321011927951.png)
 
    7. **合并分支**
 
@@ -930,7 +930,7 @@
       git merge login //在master分支上运行git merge命令，将login分支的代码合并到master分支
       ```
 
-      ![image-20210321012316710](D:\vue\前后端交互.assets\image-20210321012316710.png)
+      ![image-20210321012316710](前后端交互.assets\image-20210321012316710.png)
 
    8. **删除分支**
 
@@ -938,13 +938,13 @@
       git branch -d 分支名称
       ```
 
-      ![image-20210321012453233](D:\vue\前后端交互.assets\image-20210321012453233.png)
+      ![image-20210321012453233](前后端交互.assets\image-20210321012453233.png)
 
    9. **遇到冲突时的分支合并**
 
       如果在两个不同的分支中，对同一个文件进行了不同的修改，Git就没法干净的合并它们。此时，我们需要打开这些包含冲突的文件然后手动解决冲突。
 
-      ![image-20210321012655671](D:\vue\前后端交互.assets\image-20210321012655671.png)
+      ![image-20210321012655671](前后端交互.assets\image-20210321012655671.png)
 
 2. **远程分支操作**
 
@@ -974,7 +974,7 @@
 
       跟踪分支指的是：从远程仓库中，把远程分支下载到本地仓库中。
 
-      ![image-20210321015154645](D:\vue\前后端交互.assets\image-20210321015154645.png)
+      ![image-20210321015154645](前后端交互.assets\image-20210321015154645.png)
 
       
 
