--- a/微信小程序.md
+++ b/微信小程序.md
@@ -4,21 +4,21 @@
 
 ### 1. 开放平台和公众平台的区别
 
-​	![image-20210511140653202](D:\vue\微信小程序.assets\image-20210511140653202.png)
+​	![image-20210511140653202](微信小程序.assets\image-20210511140653202.png)
 
 ### 2. 小程序API中的三种分类
 
-​	![image-20210511144345093](D:\vue\微信小程序.assets\image-20210511144345093.png)
+​	![image-20210511144345093](微信小程序.assets\image-20210511144345093.png)
 
 ### 3.小程序的结构和组件
 
 1. 小程序的项目结构
 
-   ![image-20210511160837080](D:\vue\微信小程序.assets\image-20210511160837080.png)
+   ![image-20210511160837080](微信小程序.assets\image-20210511160837080.png)
 
 2. 小程序页面和Vue组件对比
 
-   ![image-20210511160926878](D:\vue\微信小程序.assets\image-20210511160926878.png)
+   ![image-20210511160926878](微信小程序.assets\image-20210511160926878.png)
 
 3. 小程序页面中每个组成部分的作用
 
@@ -29,19 +29,19 @@
 
 4. 设置小程序项目的默认首页
 
-   ![image-20210511162007536](D:\vue\微信小程序.assets\image-20210511162007536.png)
+   ![image-20210511162007536](微信小程序.assets\image-20210511162007536.png)
 
 5. 小程序常用的UI组件
 
-   ![image-20210511162409140](D:\vue\微信小程序.assets\image-20210511162409140.png)
+   ![image-20210511162409140](微信小程序.assets\image-20210511162409140.png)
 
-   ![image-20210512150647030](D:\vue\微信小程序.assets\image-20210512150647030.png)
+   ![image-20210512150647030](微信小程序.assets\image-20210512150647030.png)
    
-   ![image-20210512150701988](D:\vue\微信小程序.assets\image-20210512150701988.png)
+   ![image-20210512150701988](微信小程序.assets\image-20210512150701988.png)
    
-   ![image-20210512150712892](D:\vue\微信小程序.assets\image-20210512150712892.png)
+   ![image-20210512150712892](微信小程序.assets\image-20210512150712892.png)
    
-   ![image-20210512150725143](D:\vue\微信小程序.assets\image-20210512150725143-1620803272129.png)
+   ![image-20210512150725143](微信小程序.assets\image-20210512150725143-1620803272129.png)
 
 ### 4.小程序中的样式
 
@@ -59,20 +59,20 @@
 
 3. @import样式导入
 
-   ![image-20210513135759509](D:\vue\微信小程序.assets\image-20210513135759509.png)
+   ![image-20210513135759509](微信小程序.assets\image-20210513135759509.png)
 
 ### 5.全局配置文件app.json
 
 1. **app.json配置文件的作用**
 
-   ![image-20210512155201504](D:\vue\微信小程序.assets\image-20210512155201504.png)
+   ![image-20210512155201504](微信小程序.assets\image-20210512155201504.png)
 
 2. **pages-配置小程序的页面路径**
    + pages用于指定小程序由哪些页面组成，每一项都对应一个页面的路径+文件名信息。
    
    + 文件名不需要些文件后缀，框架会自动去寻找对应位置的.json、.js、.wxml和.wxss四个文件进行处理
    
-     ![image-20210513135858227](D:\vue\微信小程序.assets\image-20210513135858227.png)
+     ![image-20210513135858227](微信小程序.assets\image-20210513135858227.png)
    
 3. **自动创建新页面**
 
@@ -83,29 +83,29 @@
 
 4. **window节点常用的配置项**
 
-   ![image-20210513141919266](D:\vue\微信小程序.assets\image-20210513141919266.png)
+   ![image-20210513141919266](微信小程序.assets\image-20210513141919266.png)
 
 5. **tabBar配置Tab栏**
 
    1. tabBar的组成部分
 
-      ![image-20210513142112545](D:\vue\微信小程序.assets\image-20210513142112545.png)
+      ![image-20210513142112545](微信小程序.assets\image-20210513142112545.png)
 
    2. tabBar节点的配置项
 
-      ![image-20210513142134690](D:\vue\微信小程序.assets\image-20210513142134690.png)
+      ![image-20210513142134690](微信小程序.assets\image-20210513142134690.png)
 
    3. tabBar节点中list配置项
 
-      ![image-20210513142231847](D:\vue\微信小程序.assets\image-20210513142231847-1620886954061.png)
+      ![image-20210513142231847](微信小程序.assets\image-20210513142231847-1620886954061.png)
 
    4. tabBar节点配置的完整代码
 
-      ![image-20210513142339731](D:\vue\微信小程序.assets\image-20210513142339731.png)
+      ![image-20210513142339731](微信小程序.assets\image-20210513142339731.png)
 
       效果：
 
-      ![image-20210513142408356](D:\vue\微信小程序.assets\image-20210513142408356.png)
+      ![image-20210513142408356](微信小程序.assets\image-20210513142408356.png)
 
 ### 6. 页面配置文件page.json
 
@@ -113,13 +113,13 @@
 
 2. **页面配置文件中可选的配置项列表**
 
-   ![image-20210513143111458](D:\vue\微信小程序.assets\image-20210513143111458.png)
+   ![image-20210513143111458](微信小程序.assets\image-20210513143111458.png)
 
    页面的.json只能设置window相关的配置项，以决定本页面的窗口表现。
 
 3. **页面配置文件中可选的配置项列表**
 
-   ![image-20210513143252240](D:\vue\微信小程序.assets\image-20210513143252240.png)
+   ![image-20210513143252240](微信小程序.assets\image-20210513143252240.png)
 
 ### 7.小程序的生命周期
 
@@ -129,11 +129,11 @@
 
 3. 应用生命周期函数
 
-   ![image-20210513144054031](D:\vue\微信小程序.assets\image-20210513144054031.png)
+   ![image-20210513144054031](微信小程序.assets\image-20210513144054031.png)
 
 4. 页面生命周期函数
 
-   ![image-20210513144125256](D:\vue\微信小程序.assets\image-20210513144125256.png)
+   ![image-20210513144125256](微信小程序.assets\image-20210513144125256.png)
 
 ### 8.数据绑定与事件绑定
 
@@ -151,15 +151,15 @@
 
    + 绑定内容
 
-     ![image-20210513151629909](D:\vue\微信小程序.assets\image-20210513151629909.png)
+     ![image-20210513151629909](微信小程序.assets\image-20210513151629909.png)
 
    + 绑定属性
 
-     ![image-20210513151643613](D:\vue\微信小程序.assets\image-20210513151643613.png)
+     ![image-20210513151643613](微信小程序.assets\image-20210513151643613.png)
 
    + 运算
 
-     ![image-20210513151700508](D:\vue\微信小程序.assets\image-20210513151700508.png)
+     ![image-20210513151700508](微信小程序.assets\image-20210513151700508.png)
 
 2. **事件绑定**
 
@@ -167,11 +167,11 @@
 
    1. bindtap绑定触摸事件
 
-      ![image-20210513151845460](D:\vue\微信小程序.assets\image-20210513151845460.png)
+      ![image-20210513151845460](微信小程序.assets\image-20210513151845460.png)
 
    2. bindinput绑定文本框输入事件
 
-      ![image-20210513151916007](D:\vue\微信小程序.assets\image-20210513151916007.png)
+      ![image-20210513151916007](微信小程序.assets\image-20210513151916007.png)
 
    3. 监听文本框的数据变化
 
@@ -217,29 +217,29 @@
 
 1. wxs注意点：
 
-   ![image-20210513164658462](D:\vue\微信小程序.assets\image-20210513164658462.png)
+   ![image-20210513164658462](微信小程序.assets\image-20210513164658462.png)
 
 2. 基础语法：
 
    + 使用module.exports向外共享成员
 
-     ![image-20210513164801504](D:\vue\微信小程序.assets\image-20210513164801504.png)
+     ![image-20210513164801504](微信小程序.assets\image-20210513164801504.png)
 
    + 使用require引入其他wxs模块
 
-     ![image-20210513165115844](D:\vue\微信小程序.assets\image-20210513165115844.png)
+     ![image-20210513165115844](微信小程序.assets\image-20210513165115844.png)
 
    + 使用require的注意点
 
-     ![image-20210513165145556](D:\vue\微信小程序.assets\image-20210513165145556.png)
+     ![image-20210513165145556](微信小程序.assets\image-20210513165145556.png)
 
    + 支持的数据类型
 
-     ![image-20210513165245206](D:\vue\微信小程序.assets\image-20210513165245206.png)
+     ![image-20210513165245206](微信小程序.assets\image-20210513165245206.png)
 
 3. 内嵌wxs脚本
 
-   ![image-20210513165458775](D:\vue\微信小程序.assets\image-20210513165458775.png)
+   ![image-20210513165458775](微信小程序.assets\image-20210513165458775.png)
    示例：
 
    ```html
@@ -258,7 +258,7 @@
 
    wxs代码还可以编写在以.wxs为后缀名的文件内，就像javascript代码可以编写在以.js为后缀名的文件中一样。
 
-   ![image-20210513170518856](D:\vue\微信小程序.assets\image-20210513170518856.png)
+   ![image-20210513170518856](微信小程序.assets\image-20210513170518856.png)
 
    在wxml中如果要引入外联的wxs脚本，必须为<wxs></wxs>标签添加module和src属性。
 
@@ -266,7 +266,7 @@
 
    + src用来指定当前<wxs></wxs>标签要引入的脚本路径，必须是相对路径。
 
-     ![image-20210513170732988](D:\vue\微信小程序.assets\image-20210513170732988.png)
+     ![image-20210513170732988](微信小程序.assets\image-20210513170732988.png)
 
 ### 10.页面渲染
 
@@ -276,11 +276,11 @@
 
      在小程序中，使用`wx:if="{{condition}}"`来判断是否需要渲染该代码块
 
-     ![image-20210513180124123](D:\vue\微信小程序.assets\image-20210513180124123.png)
+     ![image-20210513180124123](微信小程序.assets\image-20210513180124123.png)
 
    + `block wx:if`
 
-     ![image-20210513180211596](D:\vue\微信小程序.assets\image-20210513180211596.png)
+     ![image-20210513180211596](微信小程序.assets\image-20210513180211596.png)
 
    + `hidden`
 
@@ -292,7 +292,7 @@
 
    + `wx:if`与`hidden`的对比
 
-     ![image-20210513180608618](D:\vue\微信小程序.assets\image-20210513180608618.png)
+     ![image-20210513180608618](微信小程序.assets\image-20210513180608618.png)
 
 2. **列表渲染**
 
@@ -334,15 +334,15 @@
 
      + key在列表循环中的作用
 
-       ![image-20210513190632939](D:\vue\微信小程序.assets\image-20210513190632939.png)
+       ![image-20210513190632939](微信小程序.assets\image-20210513190632939.png)
 
      + key值的注意点
 
-       ![image-20210513190719062](D:\vue\微信小程序.assets\image-20210513190719062.png)
+       ![image-20210513190719062](微信小程序.assets\image-20210513190719062.png)
 
      + key值的两种形式
 
-       ![image-20210513190844492](D:\vue\微信小程序.assets\image-20210513190844492.png)
+       ![image-20210513190844492](微信小程序.assets\image-20210513190844492.png)
 
 ### 11.页面事件
 
@@ -350,15 +350,15 @@
 
    1. 下拉刷新的概念及应用场景
 
-      ![image-20210513191022001](D:\vue\微信小程序.assets\image-20210513191022001.png)
+      ![image-20210513191022001](微信小程序.assets\image-20210513191022001.png)
 
    2. 启用下拉刷新
 
-      ![image-20210513191230050](D:\vue\微信小程序.assets\image-20210513191230050.png)
+      ![image-20210513191230050](微信小程序.assets\image-20210513191230050.png)
 
    3. 配置下拉刷新窗口的样式
 
-      ![image-20210513191425273](D:\vue\微信小程序.assets\image-20210513191425273.png)
+      ![image-20210513191425273](微信小程序.assets\image-20210513191425273.png)
 
    4. 监听页面的下拉刷新事件
 
@@ -372,11 +372,11 @@
 
    1. 上拉加载更多的概念及应用场景
 
-      ![image-20210513191927856](D:\vue\微信小程序.assets\image-20210513191927856.png)
+      ![image-20210513191927856](微信小程序.assets\image-20210513191927856.png)
 
    2. 配置上拉触底的距离
 
-      ![image-20210513192120638](D:\vue\微信小程序.assets\image-20210513192120638.png)
+      ![image-20210513192120638](微信小程序.assets\image-20210513192120638.png)
 
    3. 监听页面的上拉触底事件
 
@@ -386,14 +386,14 @@
 
    1. `onPageScroll(Object)`
 
-      ![image-20210513192348113](D:\vue\微信小程序.assets\image-20210513192348113.png)
+      ![image-20210513192348113](微信小程序.assets\image-20210513192348113.png)
 
    2. `onShareAppMessage(Object)`
 
-      ![image-20210513192423182](D:\vue\微信小程序.assets\image-20210513192423182.png)
+      ![image-20210513192423182](微信小程序.assets\image-20210513192423182.png)
       同时，此转发事件需要return一个Object，用于自定义转发内容：
 
-      ![image-20210513192605576](D:\vue\微信小程序.assets\image-20210513192605576.png)
+      ![image-20210513192605576](微信小程序.assets\image-20210513192605576.png)
 
       ```
       Page({
@@ -412,7 +412,7 @@
 
    2. `onTabItemTap(Object)`
 
-      ![image-20210513192906264](D:\vue\微信小程序.assets\image-20210513192906264.png)
+      ![image-20210513192906264](微信小程序.assets\image-20210513192906264.png)
 
       ```js
       onTabItemTap(item){
@@ -433,182 +433,182 @@
 
    1. 导航到非tabBar页面
 
-      ![image-20210513193442387](D:\vue\微信小程序.assets\image-20210513193442387.png)
+      ![image-20210513193442387](微信小程序.assets\image-20210513193442387.png)
 
    2. 导航到tabBar页面
 
-      ![image-20210513200528214](D:\vue\微信小程序.assets\image-20210513200528214.png)
+      ![image-20210513200528214](微信小程序.assets\image-20210513200528214.png)
 
    3. 后退导航
 
-      ![image-20210513200620363](D:\vue\微信小程序.assets\image-20210513200620363.png)
+      ![image-20210513200620363](微信小程序.assets\image-20210513200620363.png)
 
 3. **编程式导航**
 
    1. 导航到非tabBar页面
 
-      ![image-20210513200727364](D:\vue\微信小程序.assets\image-20210513200727364.png)
+      ![image-20210513200727364](微信小程序.assets\image-20210513200727364.png)
 
    2. 导航到tabBar页面
 
-      ![image-20210513200743444](D:\vue\微信小程序.assets\image-20210513200743444.png)
+      ![image-20210513200743444](微信小程序.assets\image-20210513200743444.png)
 
    3. 后退导航
 
-      ![image-20210513200811466](D:\vue\微信小程序.assets\image-20210513200811466-1620907692286.png)
+      ![image-20210513200811466](微信小程序.assets\image-20210513200811466-1620907692286.png)
 
 4. **导航传参**
 
    1. 声明式导航传参
 
-      ![image-20210513200907403](D:\vue\微信小程序.assets\image-20210513200907403.png)
+      ![image-20210513200907403](微信小程序.assets\image-20210513200907403.png)
 
    2. 编程式导航传参
 
-      ![image-20210513200921332](D:\vue\微信小程序.assets\image-20210513200921332.png)
+      ![image-20210513200921332](微信小程序.assets\image-20210513200921332.png)
 
    3. 页面接收导航传递过来的参数
 
-      ![image-20210513202717961](D:\vue\微信小程序.assets\image-20210513202717961.png)
+      ![image-20210513202717961](微信小程序.assets\image-20210513202717961.png)
 
    4. 自定义编译模式快速传参
 
-      ![image-20210513203034449](D:\vue\微信小程序.assets\image-20210513203034449-1620909035545.png)
+      ![image-20210513203034449](微信小程序.assets\image-20210513203034449-1620909035545.png)
 
 ### 13.网络数据请求
 
 1. 配置服务器域名
 
-   ![image-20210513203142762](D:\vue\微信小程序.assets\image-20210513203142762.png)
+   ![image-20210513203142762](微信小程序.assets\image-20210513203142762.png)
 
 2. 跳过域名校验
 
-   ![image-20210513203213576](D:\vue\微信小程序.assets\image-20210513203213576.png)
+   ![image-20210513203213576](微信小程序.assets\image-20210513203213576.png)
 
 3. 发起网络数据请求
 
    + get：
 
-     ![image-20210513203257748](D:\vue\微信小程序.assets\image-20210513203257748.png)
+     ![image-20210513203257748](微信小程序.assets\image-20210513203257748.png)
 
    + post：
 
-     ![image-20210513203314789](D:\vue\微信小程序.assets\image-20210513203314789.png)
+     ![image-20210513203314789](微信小程序.assets\image-20210513203314789.png)
 
    + 小程序中没有跨域限制
 
-     ![image-20210513203408137](D:\vue\微信小程序.assets\image-20210513203408137.png)
+     ![image-20210513203408137](微信小程序.assets\image-20210513203408137.png)
 
 ### 14.自定义组件
 
 1. 创建组件
 
-   ![image-20210513203448088](D:\vue\微信小程序.assets\image-20210513203448088.png)
+   ![image-20210513203448088](微信小程序.assets\image-20210513203448088.png)
 
 2. 引用组件
 
-   ![image-20210513203743403](D:\vue\微信小程序.assets\image-20210513203743403.png)
+   ![image-20210513203743403](微信小程序.assets\image-20210513203743403.png)
 
 3. 使用样式美化组件
 
-   ![image-20210513203809261](D:\vue\微信小程序.assets\image-20210513203809261.png)
+   ![image-20210513203809261](微信小程序.assets\image-20210513203809261.png)
 
 4. 组件的data与methods
 
    1. 使用data定义组件的私有数据
 
-      ![image-20210513205419441](D:\vue\javascript.assets\image-20210513205419441.png)
+      ![image-20210513205419441](javascript.assets\image-20210513205419441.png)
 
    2. 使用methods定义组件的事件处理函数
 
-      ![image-20210513205545091](D:\vue\微信小程序.assets\image-20210513205545091.png)
+      ![image-20210513205545091](微信小程序.assets\image-20210513205545091.png)
 
 5. 组件的properties
 
    1. properties的作用
 
-      ![image-20210513205623908](D:\vue\微信小程序.assets\image-20210513205623908.png)
+      ![image-20210513205623908](微信小程序.assets\image-20210513205623908.png)
 
    2. 声明properties的两种方式
 
-      ![image-20210513205708380](D:\vue\微信小程序.assets\image-20210513205708380.png)
+      ![image-20210513205708380](微信小程序.assets\image-20210513205708380.png)
 
    3. 为组件传递properties的值
 
-      ![image-20210513205755355](D:\vue\微信小程序.assets\image-20210513205755355.png)
+      ![image-20210513205755355](微信小程序.assets\image-20210513205755355.png)
 
    4. 在组件内修改properties的值
 
-      ![image-20210513205855695](D:\vue\微信小程序.assets\image-20210513205855695.png)
+      ![image-20210513205855695](微信小程序.assets\image-20210513205855695.png)
 
 6. 数据监听器
 
    1. 什么是数据监听器
 
-      ![image-20210513205934412](D:\vue\微信小程序.assets\image-20210513205934412.png)
+      ![image-20210513205934412](微信小程序.assets\image-20210513205934412.png)
 
    2. 监听子数据字段的变化
 
-      ![image-20210513210002057](D:\vue\微信小程序.assets\image-20210513210002057.png)
+      ![image-20210513210002057](微信小程序.assets\image-20210513210002057.png)
 
    3. 使用通配符**监听所有子数据字段的变化
 
-      ![image-20210513210107967](D:\vue\微信小程序.assets\image-20210513210107967.png)
+      ![image-20210513210107967](微信小程序.assets\image-20210513210107967.png)
 
 7. **组件的生命周期**
 
-   1. ![image-20210513210246643](D:\vue\微信小程序.assets\image-20210513210246643.png)
+   1. ![image-20210513210246643](微信小程序.assets\image-20210513210246643.png)
 
-   2. ![image-20210513210304272](D:\vue\微信小程序.assets\image-20210513210304272.png)
+   2. ![image-20210513210304272](微信小程序.assets\image-20210513210304272.png)
 
    3. 定义声明周期函数
 
-      ![image-20210513210345903](D:\vue\微信小程序.assets\image-20210513210345903.png)
+      ![image-20210513210345903](微信小程序.assets\image-20210513210345903.png)
 
    4. 组件所在页面的生命周期
 
-      ![image-20210513210408948](D:\vue\微信小程序.assets\image-20210513210408948.png)
+      ![image-20210513210408948](微信小程序.assets\image-20210513210408948.png)
 
-      ![image-20210513210503747](D:\vue\微信小程序.assets\image-20210513210503747.png)
+      ![image-20210513210503747](微信小程序.assets\image-20210513210503747.png)
 
 8. 组件插槽
 
    1. 默认插槽
 
-      ![image-20210513210534611](D:\vue\微信小程序.assets\image-20210513210534611.png)
-      ![image-20210513210634526](D:\vue\微信小程序.assets\image-20210513210634526.png)
+      ![image-20210513210534611](微信小程序.assets\image-20210513210534611.png)
+      ![image-20210513210634526](微信小程序.assets\image-20210513210634526.png)
 
    2. 启用多个插槽
 
-      ![image-20210513210700711](D:\vue\微信小程序.assets\image-20210513210700711.png)
+      ![image-20210513210700711](微信小程序.assets\image-20210513210700711.png)
 
    3. 定义多个插槽
 
-      ![image-20210513210720035](D:\vue\微信小程序.assets\image-20210513210720035.png)
+      ![image-20210513210720035](微信小程序.assets\image-20210513210720035.png)
 
    4. 使用多个插槽
 
-      ![image-20210513210757915](D:\vue\微信小程序.assets\image-20210513210757915.png)
+      ![image-20210513210757915](微信小程序.assets\image-20210513210757915.png)
 
 9. **组件间的通信**
 
    1. 组件之间的三种基本通信方式
 
-      ![image-20210513210935024](D:\vue\微信小程序.assets\image-20210513210935024.png)
+      ![image-20210513210935024](微信小程序.assets\image-20210513210935024.png)
 
    2. `this.selectComponent(string)`
 
-      ![image-20210513211027642](D:\vue\微信小程序.assets\image-20210513211027642.png)
+      ![image-20210513211027642](微信小程序.assets\image-20210513211027642.png)
 
    3. 通过事件监听实现子向父传值
 
-      ![image-20210513211204499](D:\vue\微信小程序.assets\image-20210513211204499.png)
+      ![image-20210513211204499](微信小程序.assets\image-20210513211204499.png)
 
 ## 2.`WePy`
 
 1. 为什么要使用`WePy`？
 
-   ![image-20210517163545867](D:\vue\微信小程序.assets\image-20210517163545867.png)
+   ![image-20210517163545867](微信小程序.assets\image-20210517163545867.png)
 
 2. 初始化`WePy`项目
 
@@ -620,35 +620,35 @@
 
    准确来说这只是一个模板项目，不能直接当作小程序运行。需要运行相关的命令，把模板项目编译为小程序项目，才可以运行。
 
-   ![image-20210517163827895](D:\vue\微信小程序.assets\image-20210517163827895.png)
+   ![image-20210517163827895](微信小程序.assets\image-20210517163827895.png)
 
 4. 实时编译`WePy`项目
 
-   ![image-20210517164047059](D:\vue\微信小程序.assets\image-20210517164047059.png)
+   ![image-20210517164047059](微信小程序.assets\image-20210517164047059.png)
 
 5. 小程序入口app.wpy
 
-   ![image-20210517164650043](D:\vue\微信小程序.assets\image-20210517164650043.png)
+   ![image-20210517164650043](微信小程序.assets\image-20210517164650043.png)
 
 6. 使用app.wpy全局配置小程序外观
 
-   ![image-20210517164607107](D:\vue\微信小程序.assets\image-20210517164607107.png)
+   ![image-20210517164607107](微信小程序.assets\image-20210517164607107.png)
 
 7. 页面`.wpy`文件中script标签组成结构
 
    页面文件`page.wpy`中所声明的页面实例继承自`wepy.page`类，该类的主要属性介绍：
 
-   ![image-20210517164854961](D:\vue\微信小程序.assets\image-20210517164854961.png)
+   ![image-20210517164854961](微信小程序.assets\image-20210517164854961.png)
 
 8. 自定义默认首页
 
    + 创建home首页
 
-     ![image-20210517164941739](D:\vue\微信小程序.assets\image-20210517164941739.png)
+     ![image-20210517164941739](微信小程序.assets\image-20210517164941739.png)
 
    + 设置默认首页
 
-     ![image-20210517165005248](D:\vue\微信小程序.assets\image-20210517165005248.png)
+     ![image-20210517165005248](微信小程序.assets\image-20210517165005248.png)
 
    + 创建`.wepy`页面的注意事项
 
@@ -660,26 +660,26 @@
 
 9. 为`WePy`页面绑定事件并传参
 
-   ![image-20210517165747657](D:\vue\微信小程序.assets\image-20210517165747657.png)
+   ![image-20210517165747657](微信小程序.assets\image-20210517165747657.png)
 
-   ![image-20210517165754866](D:\vue\微信小程序.assets\image-20210517165754866.png)
+   ![image-20210517165754866](微信小程序.assets\image-20210517165754866.png)
 
-   ![image-20210517165817018](D:\vue\微信小程序.assets\image-20210517165817018.png)
+   ![image-20210517165817018](微信小程序.assets\image-20210517165817018.png)
 
 10. `WePy`页面男的数据绑定
 
-    ![image-20210517165846866](D:\vue\微信小程序.assets\image-20210517165846866-1621241928739.png)
+    ![image-20210517165846866](微信小程序.assets\image-20210517165846866-1621241928739.png)
 
-    ![image-20210517165858368](D:\vue\微信小程序.assets\image-20210517165858368.png)
+    ![image-20210517165858368](微信小程序.assets\image-20210517165858368.png)
 
-    ![image-20210517165906135](D:\vue\微信小程序.assets\image-20210517165906135.png)
+    ![image-20210517165906135](微信小程序.assets\image-20210517165906135.png)
 
 11. 数据请求
 
-    ![image-20210517171430074](D:\vue\微信小程序.assets\image-20210517171430074.png)
+    ![image-20210517171430074](微信小程序.assets\image-20210517171430074.png)
 
-    ![image-20210517171442422](D:\vue\微信小程序.assets\image-20210517171442422.png)
+    ![image-20210517171442422](微信小程序.assets\image-20210517171442422.png)
 
-    ![image-20210517171456289](D:\vue\微信小程序.assets\image-20210517171456289.png)
+    ![image-20210517171456289](微信小程序.assets\image-20210517171456289.png)
 
-    ![image-20210517171511288](D:\vue\微信小程序.assets\image-20210517171511288.png)
+    ![image-20210517171511288](微信小程序.assets\image-20210517171511288.png)
